# TradingAgents

./: .env.example  .gitignore  README.md  README_WEB_UI.md  TradingAgents-CN-Features.md  docker-compose.yml  pyproject.toml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 231ad2fc11df_update_trading_tables_schema.py  38d4ca502233_add_batch_analysis_tasks_table.py  3b6284f6e0fe_add_news_and_financials_tables.py  74407c042167_initial_schema_with_all_models.py  803516288866_add_user_stocks_table.py  bf2b3cf52963_add_market_cap_to_stock_quotes.py
backend/app/: __init__.py  config.py  dependencies.py  main.py  server.py
backend/app/core/: database.py  redis_client.py  security.py  websocket_manager.py
backend/app/data_providers/: __init__.py  akshare_provider.py  base.py  factory.py  tushare_provider.py  yfinance_provider.py
backend/app/middleware/: error_handler.py  logging_middleware.py
backend/app/models/: __init__.py  analysis.py  batch_task.py  financials.py  news.py  stock.py  trading.py  user.py  user_stock.py
backend/app/schemas/: __init__.py  analysis.py  batch_analysis.py  financials.py  news.py  screener.py  stock.py  trading.py  user.py  watchlist.py
backend/app/services/: analysis_service.py  batch_analysis_service.py  financials_service.py  indicators_service.py  news_service.py  screener_service.py  stock_service.py  trading_account_service.py  trading_service.py  user_service.py  watchlist_service.py
backend/app/tasks/: __init__.py  analysis_tasks.py
cli/: utils.py
(+86 files in other folders)
